<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/countries_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:itemSpacing="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_india"
                style="@style/Widget.MaterialComponents.Chip.Choice.CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:text="@string/country_india"
                android:textSize="18sp"
                app:chipBackgroundColor="@drawable/news_countries_selection"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_us"
                style="@style/Widget.MaterialComponents.Chip.Choice.CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:text="@string/country_usa"
                android:textSize="18sp"
                app:chipBackgroundColor="@drawable/news_countries_selection"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_aus"
                style="@style/Widget.MaterialComponents.Chip.Choice.CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:text="@string/country_aus"
                android:textSize="18sp"
                app:chipBackgroundColor="@drawable/news_countries_selection"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countries_chip_group"
            app:shimmer_duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/news_shimmer_placeholder" />
                <include layout="@layout/news_shimmer_placeholder" />
                <include layout="@layout/news_shimmer_placeholder" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latest_news_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countries_chip_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
