<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newsViewModel"
            type="com.utkarshkore.realnewsdaily.presentation.NewsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_breaking_news"
            android:layout_width="355dp"
            android:layout_height="183dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/breaking_news_image_description"
            android:foregroundGravity="center_horizontal"
            android:scaleType="centerCrop"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/heading_top_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/heading_top_news"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="22sp"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/img_breaking_news"
            app:layout_constraintStart_toStartOf="@+id/img_breaking_news"
            app:layout_constraintTop_toBottomOf="@+id/img_breaking_news" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            app:shimmer_duration="800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/heading_top_news"
            app:layout_constraintStart_toStartOf="@+id/heading_top_news"
            app:layout_constraintTop_toBottomOf="@+id/heading_top_news"
            app:layout_constraintVertical_bias="0.13999999">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/news_shimmer_placeholder" />
                <include layout="@layout/news_shimmer_placeholder" />
                <include layout="@layout/news_shimmer_placeholder" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_news_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/heading_top_news"
            app:layout_constraintStart_toStartOf="@+id/heading_top_news"
            app:layout_constraintTop_toBottomOf="@+id/heading_top_news" />

        <Button
            android:id="@+id/btn_title_placeholder"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_red_btn"
            android:elevation="6dp"
            android:fontFamily="@font/notosans_regular"
            android:padding="2dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/title_breaking_news"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_breaking_news"
            app:layout_constraintTop_toTopOf="@+id/img_breaking_news" />

        <TextView
            android:id="@+id/breaking_news_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@{newsViewModel.topArticle.publishedAt}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_breaking_news"
            app:layout_constraintEnd_toEndOf="@+id/img_breaking_news"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_title_placeholder" />

        <TextView
            android:id="@+id/breaking_news_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/rowdies_bold"
            android:textColor="@android:color/white"
            android:text="@{newsViewModel.topArticle.title}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/breaking_news_timestamp"
            app:layout_constraintEnd_toEndOf="@+id/img_breaking_news"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_title_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/btn_title_placeholder" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
